Co-authored-by: Fabian Franz Steiner <fasteiner@users.noreply.github.com> Co-authored-by: janpilu <janpilu@users.noreply.github.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,10 @@
         "vscode": {
             "settings": { 
                 "terminal.integrated.shell.linux": "/bin/bash"
-            }
+            },
+            "extensions": [
+                "ms-vsliveshare.vsliveshare"
+            ]
         }
     }
     // "forwardPorts": [8080], // Uncomment or modify if port forwarding is needed
