adapted the main file in order to see the ga better

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,9 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "*.tpp": "cpp"
+        "*.tpp": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp"
     }
 }
