cleanup, added print functions and bash script with txt output file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,9 @@
         "concepts": "cpp",
         "numbers": "cpp",
         "chrono": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "cstring": "cpp",
+        "unordered_set": "cpp",
+        "iomanip": "cpp"
     }
 }
